0.3.8

 + trutv.com
 + video.nhl.com
 + cnn.com videos
 + issuu.com

0.3.7

 + instagram video
 + 'iframely-widget' styles used by iframely.js to identify generated widgets
 + crowdranking oembed/1 provider added (Mathias Panzenböck)