@@ -1,6 +1,6 @@
 module.exports = {
 
-    re: /http:\/\/imgur\.com\/\w+\/(\w+).*/i,
+    re: /http:\/\/imgur\.com\/(?:\w+\/)?(\w+).*/i,
 
     mixins: [
         "twitter-title",
@@ -16,9 +16,11 @@ module.exports = {
 
         var links = [];
 
-        var m;
+        var m, url;
         // If twitter image ID not equals url ID.
-        if (meta.twitter && meta.twitter.image && (m = meta.twitter.image.match(/http:\/\/i\.imgur\.com\/(\w+)\.\w+/i)) && m[1] != urlMatch[1]) {
+        if (meta.twitter
+            && (url = meta.twitter.image.url || meta.twitter.image)
+            && (m = url.match(/http:\/\/i\.imgur\.com\/(\w+)\.\w+/i)) && m[1] != urlMatch[1]) {
             links.push({
                 href: "http://imgur.com/a/" + urlMatch[1] + "/embed",
                 rel: CONFIG.R.player,
